# grpc_server

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt  client.cc
cmake/: project_configuration.cmake
image_processor/: CMakeLists.txt
image_processor/include/image_processor/: image_processor.h
image_processor/src/: CMakeLists.txt  image_processor.cc
image_processor/tests/: CMakeLists.txt  image_processor_test.cc
proto/: CMakeLists.txt
proto/protolib/: echo.proto
server/: CMakeLists.txt  server.cc
src/: client.cc  server.cc
